# C64_mini_Redquark

./: README.md
redquark-release-1.0.5/: Makefile.in  README  configure  configure.ac
redquark-release-1.0.5/data/: theC64-palette.vpl  theC64-sym-COMMON.vkm  theC64-sym-DE.vkm  theC64-sym-ES.vkm  theC64-sym-FR.vkm  theC64-sym-IT.vkm  theC64-sym-UK.vkm  theC64-sym-US.vkm
redquark-release-1.0.5/fs/usr/share/the64/ui/data/: gamecontrollerdb.txt  messages_de.msg  messages_en.msg  messages_es.msg  messages_fr.msg  messages_it.msg
redquark-release-1.0.5/fs/usr/share/the64/ui/shaders/: fragment.glsl  vertex.glsl
redquark-release-1.0.5/src/: Makefile
redquark-release-1.0.5/src/common/: Makefile.in  tsf_compress.c  tsf_compress.h  tsf_crc.c  tsf_crc.h  tsf_sha256.c  tsf_sha256.h
redquark-release-1.0.5/src/freetype/: Makefile.in  harfbuzz_kerning.c  harfbuzz_kerning.h  makefont.c  tsffont.h
redquark-release-1.0.5/src/input/: Makefile.in  tsf_control_defs.h  tsf_joystick.c  tsf_joystick.h
redquark-release-1.0.5/src/ui/: Makefile.in  c64.c  c64.h  carousel.c  carousel.h  decoration.c  decoration.h  display_menu.c  display_menu.h  event.h  factory_reset_menu.c  factory_reset_menu.h  firmware.c  firmware.h  fontatlas.c  fontatlas.h  fonts.c  fonts.h  fs_menu.c  fs_menu.h  gamelist.c  gamelist.h  gameshot.c  gameshot.h  gridmenu.c  gridmenu.h  ig_menu.c  ig_menu.h  ip_notice.c  ip_notice.h  keyboard_menu.c  keyboard_menu.h  locale.c  locale.h  locale_menu.c  locale_menu.h  mainmenu.c  mainmenu.h  palette.h  path.c  (+39 more)
redquark-release-1.0.5/src/ui/gamelibrary/: Makefile.in  gamelibrary.c  gamelibrary.h
redquark-release-1.0.5/src/vbuild/: Makefile.in  Makefile.libmonitor.in  Makefile.libraster.in  Makefile.libresid.in  Makefile.libvicemain.in  config.h  vicemain.mri
redquark-release-1.0.5/src/vbuild/src/: main.c
redquark-release-1.0.5/src/viceport/: Makefile.in  c64ui.c  core.c  emucore.h  files.c  joystick.c  joystick.h  keyboard.c  sem.c  uitraps.c  uitraps.h  video.c  videoarch.h  vsync.c  vsyncarch.c
